--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 
-scikit-learn
-pandas
+scikit-learn==1.5.2
+pandas==2.2.2
+numpy==1.26.4
+matplotlib==3.8.0
+matplotlib-inline==0.1.7
+seaborn==0.13.2
